--- a/css/css.css
+++ b/css/css.css
@@ -4,7 +4,7 @@
     -ms-transition: background-color 1000ms linear;
     transition: background-color 1000ms linear;
     text-align: center;
-    color: white;
+    color: rgb(24, 24, 24);
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: 70px;
